# ctfd-cli

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/ctfd-cli/agents/: openai.yaml
.agents/ctfd-cli/scripts/: ctfd.sh
.agents/skills/ctfd-cli/: SKILL.md
.agents/skills/ctfd-cli/agents/: openai.yaml
.agents/skills/ctfd-cli/scripts/: ctfd.sh  run_ctfd.py
.agents/skills/ctfd-cli/scripts/ctfd/: cli.py  client.py  config.py  errors.py  models.py
src/ctfd/: __init__.py  __main__.py  cli.py  client.py  models.py
tests/: test_cli.py  test_client.py  test_config.py
