[project]
name = "ctfd"
version = "0.1.0"
description = "A typed API client and CLI for CTFd participants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1,<1",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "rich>=14.2,<15",
    "typer>=0.21,<1",
]

[project.scripts]
ctfd = "ctfd.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pyyaml>=6.0.3",
    "respx>=0.22.0,<1",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]


[build-system]
requires = ["uv_build>0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
